added new section galery

--- a/html/home.html
+++ b/html/home.html
@@ -202,7 +202,11 @@
             <button class="btn-card-add btn" type="button">Add to cart</button>
           </div>
         </div>
+      </div>
+    </section>
 
+    <section class="galery">
+      <div class="container">
         <ul class="list list-wrapper">
           <li class="list-item">
             <div class="card reverse">
