--- a/html/home.html
+++ b/html/home.html
@@ -175,7 +175,7 @@
           </div>
 
           <div class="card-container">
-            <div class="card-sale">
+            <div class="card-sale hidden">
               <span class="card-sale-text">Sale</span>
             </div>
 
