fix image size and the third image none

--- a/html/home.html
+++ b/html/home.html
@@ -294,9 +294,9 @@
     <section class="our-blog">
       <div class="container">
         <h2 class="our-blog-title">Our blog</h2>
-        <ul class="list">
+        <ul class="our-blog-list">
           <li class="list-item">
-            <img src="../img/spoons.jpg" alt="spoons" />
+            <img class="item spoons" src="../img/spoons.jpg" alt="spoons" />
             <h4 class="our-blog-subtitle">
               Herbal ingredients and their great role in our life
             </h4>
@@ -305,7 +305,7 @@
             </p>
           </li>
           <li class="list-item">
-            <img src="../img/bad.jpg" alt="bad" />
+            <img class="item bad" src="../img/bad.jpg" alt="bad" />
             <h4 class="our-blog-subtitle">
               The opinion of doctors on the effect of herbal ingredients on
               health
@@ -314,7 +314,7 @@
               Admin &#8211; <span class="our-blog-subtext">June 15, 2023</span>
             </p>
           </li>
-          <li class="list-item">
+          <li class="list-item hidden">
             <img src="../img/atleth.jpg" alt="atleth" />
             <h4 class="our-blog-subtitle">
               Aminoacids and their role in muscle health
