justify-content: space-around

--- a/html/home.html
+++ b/html/home.html
@@ -304,7 +304,7 @@
               Admin &#8211; <span class="our-blog-subtext">July 19, 2023</span>
             </p>
           </li>
-          <li class="list-item">
+          <li class="list-item active">
             <img class="item bad" src="../img/bad.jpg" alt="bad" />
             <h4 class="our-blog-subtitle">
               The opinion of doctors on the effect of herbal ingredients on
