correction of the section

--- a/html/home.html
+++ b/html/home.html
@@ -331,7 +331,7 @@
       <div class="container">
         <a href="./home.html">
           <svg class="logo" width="66px" height="41px">
-            <use href="../img/sprite.svg#icon-logo"></use>
+            <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
         </a>
 
