corected footer logo and list

--- a/html/home.html
+++ b/html/home.html
@@ -329,8 +329,8 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./home.html">
-          <svg class="logo" width="66px" height="41px">
+        <a class="footer-logo-link" href="./home.html">
+          <svg class="logo footer" width="114px" height="70px">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
         </a>
@@ -770,7 +770,7 @@
             </a>
           </li>
         </ul>
-        <p class="footter-text">
+        <p class="footer-text">
           &#169; 2023 - Vital-J-Empowering.All rights reserved!
         </p>
       </div>
