styles with desktop

--- a/html/home.html
+++ b/html/home.html
@@ -15,6 +15,7 @@
       <div class="navigation-top">
         <div class="container container-flex top">
           <span class="navigation-top__time"><time>9:41</time></span>
+
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
               <svg class="account" width="24" height="24">
@@ -52,6 +53,23 @@
             <use href="../img/sprite.svg#icon-Search"></use>
           </svg>
         </span>
+        <ul class="navigation-main-list">
+          <li class="navigation-main-list__item">
+            <a href="#" class="navigation-main-list__item-link">Home</a>
+          </li>
+          <li class="navigation-main-list__item">
+            <a href="#" class="navigation-main-list__item-link">About us</a>
+          </li>
+          <li class="navigation-main-list__item">
+            <a href="#" class="navigation-main-list__item-link">Shop</a>
+          </li>
+          <li class="navigation-main-list__item">
+            <a href="#" class="navigation-main-list__item-link">Contact us</a>
+          </li>
+          <li class="navigation-main-list__item">
+            <a href="#" class="navigation-main-list__item-link">FAQ</a>
+          </li>
+        </ul>
 
         <ul class="list navigation-list">
           <li class="list-item">
