tag summary and details from navigation

--- a/html/home.html
+++ b/html/home.html
@@ -61,7 +61,11 @@
             <a href="#" class="navigation-main-list__item-link">About us</a>
           </li>
           <li class="navigation-main-list__item">
-            <a href="#" class="navigation-main-list__item-link">Shop</a>
+            <a href="#" class="navigation-main-list__item-link">
+              <details>
+                <summary>Shop</summary>
+              </details>
+            </a>
           </li>
           <li class="navigation-main-list__item">
             <a href="#" class="navigation-main-list__item-link">Contact us</a>
