added classes from image

--- a/html/home.html
+++ b/html/home.html
@@ -368,7 +368,7 @@
             </p>
           </li>
           <li class="list-item hidden">
-            <img src="../img/atleth.jpg" alt="atleth" />
+            <img class="item" src="../img/atleth.jpg" alt="atleth" />
             <h4 class="our-blog-subtitle">
               Aminoacids and their role in muscle health
             </h4>
