--- a/html/home.html
+++ b/html/home.html
@@ -407,21 +407,21 @@
             <ul class="list footer-list-networks">
               <li class="footer-list-item">
                 <a href="./home.html">
-                  <svg class="facebook" width="24px" height="24px">
+                  <svg class="facebook social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
                 <a href="./home.html">
-                  <svg class="twiter" width="24px" height="24px">
+                  <svg class="twiter social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-tweeter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
                 <a href="./home.html">
-                  <svg class="instagram" width="24px" height="24px">
+                  <svg class="instagram social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
