fast write html form

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -115,6 +115,27 @@
       </div>
     </section>
 
+    <main>
+      <div class="container">
+        <div class="bradcrumbs">
+          <p>Vital-J Empowering</p>
+          <p>Sign in</p>
+        </div>
+        <h1>Sign in</h1>
+        <form action="#">
+          <label for="email"> Username or e-mail* </label>
+          <input type="text" id="email" />
+          <label for="password"> Password* </label>
+          <input type="password" id="password" />
+          <input type="checkbox" />
+          <span>Remember password</span>
+          <span>Lost your password?</span>
+          <button type="submit">Login</button>
+          <span>Don't have an account? Sign up!</span>
+        </form>
+      </div>
+    </main>
+
     <footer class="footer">
       <div class="container">
         <a class="footer-logo-link" href="./home.html">
