add style from sing-in section

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -134,10 +134,14 @@
           <input type="password" id="password" placeholder="**********" />
           <br />
           <input type="checkbox" />
-          <span>Remember password</span>
-          <span>Lost your password?</span>
+          <span class="sign-in__subtitle">
+            <a class="sign-in__link" href="#">Remember password</a>
+          </span>
+          <span class="sign-in__subtitle">
+            <a class="sign-in__link underlink" href="#">Lost your password?</a>
+          </span>
           <button class="btn collection-btn" type="submit">Login</button>
-          <a>Don't have an account? Sign up!</a>
+          <a class="sign-in__link underlink">Don't have an account? Sign up!</a>
         </form>
       </div>
     </main>
