corected style with sign-in(button and logo footter)

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -133,14 +133,16 @@
           <br />
           <input type="password" id="password" placeholder="**********" />
           <br />
-          <input type="checkbox" />
-          <span class="sign-in__subtitle">
-            <a class="sign-in__link" href="#">Remember password</a>
-          </span>
+          <label for="#">
+            <input type="checkbox" />
+            <span class="sign-in__subtitle">
+              <a class="sign-in__link" href="#">Remember password</a>
+            </span>
+          </label>
           <span class="sign-in__subtitle">
             <a class="sign-in__link underlink" href="#">Lost your password?</a>
           </span>
-          <button class="btn collection-btn" type="submit">Login</button>
+          <button class="sign-in btn" type="submit">Login</button>
           <a class="sign-in__link underlink">Don't have an account? Sign up!</a>
         </form>
       </div>
@@ -149,7 +151,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer-logo-link" href="./home.html">
-          <svg class="logo footer" width="114px" height="70px">
+          <svg class="logo footer" width="77px" height="47px">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
         </a>
