added custom input checkbox

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -135,7 +135,8 @@
 
           <div class="label-container">
             <label class="sign-in__label">
-              <input type="checkbox" />
+              <input type="checkbox" class="visually-hidden" name="remember" />
+              <span class="checkbox-icon"></span>
               Remember password
             </label>
             <span class="sign-in__subtitle">
