style from sign-in-networks

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -149,6 +149,29 @@
           <a class="sign-in__link underlink">Don't have an account? Sign up!</a>
         </form>
         <span class="sign-in__under-form">Or</span>
+        <ul class="sign-in-networks__list">
+          <li class="sign-in-networks__item">
+            <a class="sign-in-networks__link" href="#">
+              <svg class="sign-in-networks__icon" width="46" height="46">
+                <use href="../img/sprite.svg#google-icon"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="sign-in-networks__item">
+            <a class="sign-in-networks__link" href="#">
+              <svg class="sign-in-networks__icon" width="46" height="46">
+                <use href="../img/sprite.svg#facebook-icon"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="sign-in-networks__item">
+            <a class="sign-in-networks__link" href="#">
+              <svg class="sign-in-networks__icon" width="46" height="46">
+                <use href="../img/sprite.svg#apple-icon"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </main>
 
