added hover and focus from links

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -127,11 +127,11 @@
           <label for="email" class="sign-in__subtext"
             >Username or e-mail*</label
           >
-          <input type="text" id="email" placeholder="Alex2617@gmail.com" />
+          <input type="text" id="email" />
 
           <label for="password" class="sign-in__subtext">Password*</label>
 
-          <input type="password" id="password" placeholder="**********" />
+          <input type="password" id="password" />
 
           <div class="label-container">
             <label class="sign-in__label">
