added form-container and setings here

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -123,7 +123,7 @@
           <p class="bradcrumbs__text">Sign in</p>
         </div>
         <h1 class="sign-in__title">Sign in</h1>
-        <form action="#">
+        <form class="form-container" action="#">
           <label for="email" class="sign-in__subtext"
             >Username or e-mail*</label
           >
