pseudo-element with bradcrumbs in styles

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -61,12 +61,12 @@
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">About us</a>
             </li>
-            <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">
-                <details>
-                  <summary>Shop</summary>
-                </details>
-              </a>
+            <li class="navigation-main-list__item summary">
+              <a href="#" class="navigation-main-list__item-link">Shop</a>
+              <span
+                ><svg class="shop-icon" width="16" height="16">
+                  <use href="../img/sprite.svg#icon-arrow-down"></use></svg
+              ></span>
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">Contact us</a>
@@ -118,9 +118,9 @@
     <main>
       <div class="container">
         <div class="bradcrumbs">
-          <p class="bradcrumbs__text">Vital-J Empowering</p>
+          <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
           <span>&#10095;</span>
-          <p class="bradcrumbs__text">Sign in</p>
+          <a href="./sign-in.html" class="bradcrumbs__link">Sign in</a>
         </div>
         <h1 class="sign-in__title">Sign in</h1>
         <form class="form-container" action="#">
