--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -14,7 +14,7 @@
     <header class="navigation">
       <div class="navigation-top">
         <div class="container container-flex top">
-          <span class="navigation-top__time"><time>9:41</time></span>
+          <span class="navigation-top__time">9:41</span>
 
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
@@ -100,17 +100,17 @@
             </a>
           </li>
 
-          <a class="navigation-search-link">
+          <btn class="navigation-search-link">
             <svg class="Search" width="24" height="24">
               <use href="../img/sprite.svg#icon-Search"></use>
             </svg>
-          </a>
+          </btn>
 
-          <a class="burger-btn">
+          <btn class="burger-btn">
             <svg class="Burger-icon" width="24" height="24">
               <use href="../img/sprite.svg#icon-Burger"></use>
             </svg>
-          </a>
+          </btn>
         </ul>
       </div>
     </header>
