added header and footter

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <a href="./html/home.html">Home</a>
     <br />
     <a href="./html/sign-in.html">Sign In</a>
+    <br />
+    <a href="./html/my-account.html">My-account</a>
   </body>
 </html>
