--- a/html/my-account.html
+++ b/html/my-account.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In</title>
+    <title>My account</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
@@ -114,6 +114,17 @@
         </ul>
       </div>
     </header>
+
+    <main>
+      <div class="container">
+        <div class="bradcrumbs">
+          <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
+          <span>&#10095;</span>
+          <a href="./sign-in.html" class="bradcrumbs__link">My account</a>
+        </div>
+        <h1 class="sign-in__title">My data</h1>
+      </div>
+    </main>
 
     <footer class="footer">
       <div class="container">
