Added form from my-account

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -123,6 +123,20 @@
           <a href="./sign-in.html" class="bradcrumbs__link">My account</a>
         </div>
         <h1 class="sign-in__title">My data</h1>
+        <form>
+          <form class="form-container" action="#">
+          <label for="email" class="sign-in__subtext"
+            >Name</label>
+          <input type="text" id="email" placeholder="Put your name"/>
+
+          <label for="password" class="sign-in__subtext">Last name</label>
+          <input type="password" id="password" placeholder="Put your last name"/>
+          
+          <label for="email" class="sign-in__subtext"
+            >Username</label
+          >
+          <input type="text" id="email" placeholder="Put your username"/>
+        </form>
       </div>
     </main>
 
