--- a/html/my-account.html
+++ b/html/my-account.html
@@ -194,6 +194,7 @@
             placeholder="Confirm new password"
           />
         </form>
+        <h2 class="sign-in__subtitle two"></h2>
       </div>
     </main>
 
