--- a/html/my-account.html
+++ b/html/my-account.html
@@ -132,83 +132,6 @@
                 </svg>
               </button>
             </span>
-            <div class="sign-in__item-container">
-              <h1 class="sign-in__title">My data</h1>
-              <svg class="icon-pencil" width="24px" height="24px">
-                <use href="../img/sprite.svg#icon-Pencil"></use>
-              </svg>
-            </div>
-            <h2 class="sign-in__subtitle">My personal data</h2>
-
-            <form class="form-data" action="#">
-              <label for="name" class="sign-in__subtext">Name</label>
-              <input
-                class="input-form"
-                type="text"
-                id="name"
-                placeholder="Put your name"
-              />
-
-              <label for="lastName" class="sign-in__subtext">Last name</label>
-              <input
-                class="input-form"
-                type="text"
-                id="lastName"
-                placeholder="Put your last name"
-              />
-
-              <label for="userName" class="sign-in__subtext">Username</label>
-              <input
-                class="input-form"
-                type="text"
-                id="userName"
-                placeholder="Put your username"
-              />
-            </form>
-            <h2 class="sign-in__subtitle two">My contacts</h2>
-            <form class="form-data">
-              <label for="email" class="sign-in__subtext">E-mail</label>
-              <input
-                class="input-form"
-                type="text"
-                id="email"
-                placeholder="Alex2617@gmail.com"
-              />
-
-              <label for="phoneNumber" class="sign-in__subtext"
-                >Phone number</label
-              >
-              <input
-                class="input-form"
-                type="password"
-                id="phoneNumber"
-                placeholder="+ _ (___) ___ __ __"
-              />
-            </form>
-
-            <h2 class="sign-in__subtitle two">Change password</h2>
-            <form class="form-data">
-              <label for="newPassword" class="sign-in__subtext"
-                >New password</label
-              >
-              <input
-                class="input-form"
-                type="password"
-                id="newPassword"
-                placeholder="Put new password"
-              />
-
-              <label for="confirmNewPassword" class="sign-in__subtext"
-                >Confirm new password</label
-              >
-              <input
-                class="input-form"
-                type="password"
-                id="confirmNewPassword"
-                placeholder="Confirm new password"
-              />
-            </form>
-            <h2 class="sign-in__subtitle two"></h2>
           </li>
           <li>
             <span class="interface-list__item"
@@ -231,6 +154,82 @@
             </span>
           </li>
         </ul>
+        <div class="sign-in__item-container">
+          <h1 class="sign-in__title">My data</h1>
+          <svg class="icon-pencil" width="24px" height="24px">
+            <use href="../img/sprite.svg#icon-Pencil"></use>
+          </svg>
+        </div>
+        
+        <form  action="#">
+          <fieldset class="form-data two">
+            <legend class="sign-in__subtitle">My personal data</legend>
+
+            <label for="name" class="sign-in__subtext">Name</label>
+            <input
+              class="input-form"
+              type="text"
+              id="name"
+              placeholder="Put your name"
+            />
+  
+            <label for="lastName" class="sign-in__subtext">Last name</label>
+            <input
+              class="input-form"
+              type="text"
+              id="lastName"
+              placeholder="Put your last name"
+            />
+  
+            <label for="userName" class="sign-in__subtext">Username</label>
+            <input
+              class="input-form"
+              type="text"
+              id="userName"
+              placeholder="Put your username"
+            />
+          </fieldset>
+        
+          <fieldset class="form-data two">
+          <legend class="sign-in__subtitle two">My contacts</legend>
+          <label for="email" class="sign-in__subtext">E-mail</label>
+          <input
+            class="input-form"
+            type="text"
+            id="email"
+            placeholder="Alex2617@gmail.com"
+          />
+
+          <label for="phoneNumber" class="sign-in__subtext">Phone number</label>
+          <input
+            class="input-form"
+            type="password"
+            id="phoneNumber"
+            placeholder="+ _ (___) ___ __ __"
+          />
+        </fieldset>
+
+        <fieldset class="form-data two">
+          <legend class="sign-in__subtitle two">Change password</legend>
+          <label for="newPassword" class="sign-in__subtext">New password</label>
+          <input
+            class="input-form"
+            type="password"
+            id="newPassword"
+            placeholder="Put new password"
+          />
+
+          <label for="confirmNewPassword" class="sign-in__subtext"
+            >Confirm new password</label
+          >
+          <input
+            class="input-form"
+            type="password"
+            id="confirmNewPassword"
+            placeholder="Confirm new password"
+          />
+        </fieldset>
+        <h2 class="sign-in__subtitle two"></h2>
         <h3 class="log-out">Log out</h3>
       </div>
     </main>
