clouse tag form

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -160,8 +160,8 @@
             <use href="../img/sprite.svg#icon-Pencil"></use>
           </svg>
         </div>
-        
-        <form  action="#">
+
+        <form action="#">
           <fieldset class="form-data two">
             <legend class="sign-in__subtitle">My personal data</legend>
 
@@ -172,7 +172,7 @@
               id="name"
               placeholder="Put your name"
             />
-  
+
             <label for="lastName" class="sign-in__subtext">Last name</label>
             <input
               class="input-form"
@@ -180,7 +180,7 @@
               id="lastName"
               placeholder="Put your last name"
             />
-  
+
             <label for="userName" class="sign-in__subtext">Username</label>
             <input
               class="input-form"
@@ -189,46 +189,51 @@
               placeholder="Put your username"
             />
           </fieldset>
-        
+
           <fieldset class="form-data two">
-          <legend class="sign-in__subtitle two">My contacts</legend>
-          <label for="email" class="sign-in__subtext">E-mail</label>
-          <input
-            class="input-form"
-            type="text"
-            id="email"
-            placeholder="Alex2617@gmail.com"
-          />
+            <legend class="sign-in__subtitle two">My contacts</legend>
+            <label for="email" class="sign-in__subtext">E-mail</label>
+            <input
+              class="input-form"
+              type="text"
+              id="email"
+              placeholder="Alex2617@gmail.com"
+            />
 
-          <label for="phoneNumber" class="sign-in__subtext">Phone number</label>
-          <input
-            class="input-form"
-            type="password"
-            id="phoneNumber"
-            placeholder="+ _ (___) ___ __ __"
-          />
-        </fieldset>
+            <label for="phoneNumber" class="sign-in__subtext"
+              >Phone number</label
+            >
+            <input
+              class="input-form"
+              type="password"
+              id="phoneNumber"
+              placeholder="+ _ (___) ___ __ __"
+            />
+          </fieldset>
 
-        <fieldset class="form-data two">
-          <legend class="sign-in__subtitle two">Change password</legend>
-          <label for="newPassword" class="sign-in__subtext">New password</label>
-          <input
-            class="input-form"
-            type="password"
-            id="newPassword"
-            placeholder="Put new password"
-          />
+          <fieldset class="form-data two">
+            <legend class="sign-in__subtitle two">Change password</legend>
+            <label for="newPassword" class="sign-in__subtext"
+              >New password</label
+            >
+            <input
+              class="input-form"
+              type="password"
+              id="newPassword"
+              placeholder="Put new password"
+            />
 
-          <label for="confirmNewPassword" class="sign-in__subtext"
-            >Confirm new password</label
-          >
-          <input
-            class="input-form"
-            type="password"
-            id="confirmNewPassword"
-            placeholder="Confirm new password"
-          />
-        </fieldset>
+            <label for="confirmNewPassword" class="sign-in__subtext"
+              >Confirm new password</label
+            >
+            <input
+              class="input-form"
+              type="password"
+              id="confirmNewPassword"
+              placeholder="Confirm new password"
+            />
+          </fieldset>
+        </form>
         <h2 class="sign-in__subtitle two"></h2>
         <h3 class="log-out">Log out</h3>
       </div>
