added mobile menu

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -120,7 +120,7 @@
         <div class="bradcrumbs">
           <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
           <span>&#10095;</span>
-          <a href="./sign-in.html" class="bradcrumbs__link">My account</a>
+          <a href="./my-account.html" class="bradcrumbs__link">My account</a>
         </div>
         <article>
           <ul class="interface-list">
