--- a/html/home.html
+++ b/html/home.html
@@ -107,11 +107,11 @@
             </svg>
           </a>
 
-          <a class="burger-btn">
+          <button class="burger-btn" aria-expanded="false">
             <svg class="Burger-icon" width="24" height="24">
               <use href="../img/sprite.svg#icon-Burger"></use>
             </svg>
-          </a>
+          </button>
         </ul>
         <div class="menu-container">
           <div class="menu-mobile-wrapper">
@@ -862,5 +862,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/burger.js"></script>
   </body>
 </html>
