corect style modal-menu

--- a/html/home.html
+++ b/html/home.html
@@ -120,6 +120,11 @@
                 <use href="../img/sprite.svg#icon-btn-close"></use>
               </svg>
             </button>
+            <a class="navigation-logo" href="./home.html">
+              <svg class="logo" width="66" height="41">
+                <use href="../img/sprite.svg#icon-logo"></use>
+              </svg>
+            </a>
             <ul>
               <li><a href="">Home</a></li>
               <li><a href="">About us</a></li>
