corect with style search item

--- a/html/home.html
+++ b/html/home.html
@@ -100,19 +100,18 @@
               <span class="list-item__number">0</span>
             </a>
           </li>
-
-          <a class="navigation-search-link">
-            <svg class="Search" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Search"></use>
-            </svg>
-          </a>
-
-          <button class="burger-btn" aria-expanded="false">
-            <svg class="Burger-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Burger"></use>
-            </svg>
-          </button>
         </ul>
+        <button class="navigation-search-link">
+          <svg class="Search" width="24" height="24">
+            <use href="../img/sprite.svg#icon-Search"></use>
+          </svg>
+        </button>
+
+        <button class="burger-btn" aria-expanded="false">
+          <svg class="Burger-icon" width="24" height="24">
+            <use href="../img/sprite.svg#icon-Burger"></use>
+          </svg>
+        </button>
         <div class="menu-container">
           <div class="menu-mobile-wrapper">
             <button class="btn-close">
@@ -868,5 +867,6 @@
       </div>
     </footer>
     <script src="../js/burger.js"></script>
+    <script src="'../js/search.js"></script>
   </body>
 </html>
