--- a/html/home.html
+++ b/html/home.html
@@ -867,6 +867,6 @@
       </div>
     </footer>
     <script src="../js/burger.js"></script>
-    <script src="'../js/search.js"></script>
+    <script src="../js/search.js"></script>
   </body>
 </html>
