--- a/html/home.html
+++ b/html/home.html
@@ -115,7 +115,7 @@
         <div class="menu-container">
           <div class="menu-mobile-wrapper">
             <button class="btn-close">
-              <svg class="" width="12px" height="12px">
+              <svg class="btn-close__icon" width="12px" height="12px">
                 <use href="../img/sprite.svg#icon-btn-close"></use>
               </svg>
             </button>
